--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@samrum/vite-plugin-web-extension": "^3.0.0",
     "@types/chrome": "^0.0.206",
     "@types/webextension-polyfill": "^0.9.2",
+    "eslint": "^8.31.0",
     "vite": "~4.0.3",
     "web-ext": "^7.4.0"
   },
