--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "watch": "vite build --watch",
     "dev": "vite",
+    "serve:waterfox": "web-ext run --devtools --start-url \"about:debugging#/runtime/this-firefox\"  --source-dir ./dist/",
     "serve:firefox": "web-ext run --start-url \"about:debugging#/runtime/this-firefox\"  --source-dir ./dist/",
     "serve:chrome": "web-ext run -t chromium --start-url \"https://google.com\" --source-dir ./dist/"
   },
