--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@samrum/vite-plugin-web-extension": "^3.0.0",
     "@types/chrome": "^0.0.206",
     "@types/webextension-polyfill": "^0.9.2",
+    "@web/dev-server": "^0.1.35",
     "eslint": "^8.31.0",
     "vite": "~4.0.3",
     "web-ext": "^7.4.0"
   },
   "dependencies": {
+    "panic-server": "^1.1.1",
     "webextension-polyfill": "^0.10.0"
   }
 }
